@startuml
class Persona {
    # protected rut: String
    # protected nombre: String
    # protected apellidoP: String
    # protected apellidoM: String
    # protected fechaNac: Date

    + public logearUsuario(): Void
    + public verCalificacion(): Void
    + public mensajear(): Void
}

class Docente {
    - private asignatura: String

    + public adjuntarMaterial(): Void
    + public registrarCalificacion(): Void
}

class Estudiante {
    - private carrera: String
    - private regular: Boolean
    - private beneficio: Boolean

    + public inscribirCurso(): Void
    + public visualizarMaterial(): Void
    + public desarrollarEvaluacion(): Void
    + public adjuntarEvaluacion(): Void
    + public solicitarBeneficio(): Void
}

class Curso {
    - private departamento: String
    - private profJefe: String
    - private duracion: Integer
    - private posgrado: Boolean
    - private periodo: String
    - private cantidadMatri: Integer

    + public asignarJefeCarr(): Void
    + public registrarPeriodo(): Void
    + public sumarMatri(): Void
}

class Asignatura {
    - private semestre: Integer
    - private departamento: String
    - private profesor: String

    + public asignarProfe(): Void
    + public promedioNotas(): Void
    + public compartirInfo(): Void 
}

class Arancel {
    - private anio: Integer
    - private valor: Long
    - private cuota: Integer
    
    + public calcularValorCuota(): Void
    + public mostrarCuota(): Void
}

class Beca {
    - private nombre: String
    - private cantFinan: String

    + public calcularRequisitos(): Void
}

Docente --|> Persona
Estudiante --|> Persona
Asignatura --o "1..*" Curso
Estudiante "1..*" -- Asignatura
Estudiante *-- "inscribe 1" Curso
Docente *-- "enseña 1..*" Curso
Docente "1..*" -- "imparte 1..*" Asignatura
Estudiante -- "paga 1" Arancel
Estudiante -- "solicita" Beca
Curso *-- "1" Arancel

@enduml